		 (work item 20284).		
		-[Diagnostics] Created a public API for querying the container for diagnostic results (work item 20062)
		-[Core] Container.InstanceCreated event added to get notified by the container when a new instance
	     was created. (work item 19824).
		-[Core] Container.Register<TConcrete>(Lifestyle) overload has been added. (Work item 20324).

	Changes:
		-[Core] Diagnostics moved into a separate project.
		-[Core] The container now ensures that property dependencies are always created before the type in
		 which they are injected into. (work item 20100).

	Bug fixes:
		-[Core/LifetimeScoping/Web/Wcf] Instances were disposed in wrong order. (work item 20100)
		-[Core] Not all created registrations ended up in the debugger diagnostics view (work item 19954).
		-[Core] Visual Basic debugger now displays debug information. The experience still sucks for VB
		 developers, but at least they can view the information now. (work item 20271)
		-[Core] Exception messages often contained the text "No registration for type {0} could be found " 
		 even though the type was registered explicitly. (Work item 20272).
		-[Core] RegisterOpenGeneric could fail because it would try to apply an incompatible implementation,
		 because the generic type constraints weren't always validated correctly.
	
				
Version 2.3.5 (v2.3.5 RTM) 2013-09-02

	General description:
		This patch release fixes a minor bug the Integration.LifetimeScoping package and fixes versioning
		problems caused by release 2.3.4.

	Bug fixes:
		[LifetimeScoping] Making a registration using RegisterOpenGeneric and the lifetime scope lifestyle,
		without explicitly enabling lifetime scoping using EnableLifetimeScoping, led to a uninformative
		exception, hiding the real problem. (work item 20162).


Version 2.3.2 (v2.3.2 RTM) 2013-08-31

	General description:
		This patch release fixes a few minor bugs in the Core library and one in the MVC integration library.

	Bug fixes: